# satellites

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tle_parser.cpp  tle_parser.h
Files/: output.txt
InputFiles/: Iridium.txt
OutputFiles/: output.txt
